--- a/main_vite/index.html
+++ b/main_vite/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Keywords" content="mental health; health; deppression; anxiety">
     <link rel="icon" type="image/x-icon" href="">
-    <title>placeholder</title>
+    <title>Behind The Smile</title>
 
     <!-- Google Fonts Fallback-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,9 +22,6 @@
 
     <!-- Sweet Alert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <!-- JQuery-->
-    <script  src="<?= base_url('assets/Jquery/jquery-3.6.0.js'); ?>"></script>
   </head>
   <body class="relative">
     <div id="root"></div>
